--- a/taskstyle.css
+++ b/taskstyle.css
@@ -43,6 +43,12 @@ h1 {
   width:600px;
   background-color: white;
 }
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  gap: 10px;
+}
 
 .edittask {
   margin-bottom: 20px;
@@ -62,7 +68,6 @@ h1 {
 }
 .error {
   width: 200px;
-  margin-top:15px;
   margin-left:21%;
   font-size:12px;
   color:red;
